采用vdoing主题风格重置博客系统

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.5.4",
+    "@vuepress/plugin-medium-zoom": "^1.5.4",
     "vuepress": "^1.9.7",
     "vuepress-theme-reco": "^1.6.11",
-    "@vuepress/plugin-back-to-top": "^1.5.4",
-    "@vuepress/plugin-medium-zoom": "^1.5.4"
+    "vuepress-theme-vdoing": "^1.9.5"
   },
   "dependencies": {
     "markdown-it-disable-url-encode": "^1.0.1"
