--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
-          ACCESS_TOKEN: ${{ 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 }} # 也就是我们刚才生成的 secret
+          ACCESS_TOKEN: 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  # 也就是我们刚才生成的 secret
           BRANCH: gh-pages # 部署到 gh-pages 分支，因为 main 分支存放的一般是源码，而 gh-pages 分支则用来存放生成的静态文件
           FOLDER: docs/.vuepress/dist # vuepress 生成的静态文件存放的地方
